closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/fields/LOS_Comments__c.field-meta.xml
<CustomField>
    <fullName>LOS_Comments__c</fullName>
    <description>Comments. See docs/data-dictionary.md for usage.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>