closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/fields/LOS_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>LOS_Credit_Application__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Credit Application. See docs/data-dictionary.md for usage.</description>
    <label>Credit Application</label>
    <referenceTo>LOS_Credit_Application__c</referenceTo>
    <relationshipLabel>LOS Lifecycle History Credit Application</relationshipLabel>
    <relationshipName>LOS_Lifecycle_History_Credit_Application</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>