closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/fields/LOS_Reason__c.field-meta.xml
<CustomField>
    <fullName>LOS_Reason__c</fullName>
    <description>Reason. See docs/data-dictionary.md for usage.</description>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>