closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/fields/LOS_To_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_To_Stage__c</fullName>
    <description>To Stage. See docs/data-dictionary.md for usage.</description>
    <label>To Stage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>