closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/fields/LOS_Transition_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>LOS_Transition_Date_Time__c</fullName>
    <description>Transition Date Time. See docs/data-dictionary.md for usage.</description>
    <label>Transition Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>