closDevOrg/force-app/main/default/objects/LOS_Lifecycle_History__c/validationRules/LOS_Required_Performed_By.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Required_Performed_By</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(LOS_Performed_By__c)</errorConditionFormula>
    <errorMessage>Performed By is required.</errorMessage>
</ValidationRule>